tests/fixtures/invalid/str_floordiv_none.py
# Cannot floor divide Str and None
x: str = "hello" // None
